Source/WebKit2/UIProcess/WebInspectorProxy.cpp
@@ -48,10 +48,10 @@ using namespace WebCore;
 
 namespace WebKit {
 
-const unsigned WebInspectorProxy::minimumWindowWidth = 500;
+const unsigned WebInspectorProxy::minimumWindowWidth = 750;
 const unsigned WebInspectorProxy::minimumWindowHeight = 400;
 
-const unsigned WebInspectorProxy::initialWindowWidth = 750;
+const unsigned WebInspectorProxy::initialWindowWidth = 1000;
 const unsigned WebInspectorProxy::initialWindowHeight = 650;
 
 const unsigned WebInspectorProxy::minimumAttachedHeight = 250;
